<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.carP.RideConfirmation"
    android:background="@drawable/gradient">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:text="@string/no_rides_available"
        android:id="@+id/text_RideDetails"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_centerInParent="true">
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ret"
            android:layout_marginRight="50dp"
            android:id="@+id/homeReturn"
            android:background="@color/gradient5"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@color/gradient0"
            android:text="@string/logout"
            android:id="@+id/logoutBtn"/>
    </LinearLayout>
</RelativeLayout>
