<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.carP.OfferActivity"
    android:background="@drawable/gradient">

    <EditText
        android:id="@+id/editOfr_Source"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/first_name"
        android:ellipsize="end"
        android:hint="@string/sourcePlace"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLines="1"
        android:padding="10dp" />
    <EditText
        android:id="@+id/editOfr_Dest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editOfr_Source"
        android:ellipsize="end"
        android:hint="@string/destPlace"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/editOfr_Time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editOfr_Dest"
        android:ellipsize="end"
        android:hint="@string/date_and_time"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edit_Phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"
        android:ems="10"
        android:digits="0123456789"
        android:layout_below="@+id/editOfr_Time"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/editText_CarNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/carNum"
        android:ems="10"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_below="@+id/edit_Phone"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/editText_CarNo"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Offer Ride"
            android:id="@+id/btn_ofr"
            android:background="@color/gradient5"
            android:gravity="center"
            android:layout_below="@+id/editText_CarNo"/>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:background="@color/gradient6"
            android:id="@+id/btn_Cancel"
            android:layout_below="@+id/btn_ofr"/>
    </LinearLayout>

</RelativeLayout>
